k8s/affable/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: affable
  labels:
    istio-injection: enabled
