k8s/affable/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: affable
spec:
  template:
    metadata:
    spec:
      serviceAccountName: affable

      containers:

      - name: affable
        image: affable:0
        ports:
        - name: http
          containerPort: 4000
        - name: tcp-erlang
          containerPort: 5555
        - name: tcp-epmd
          containerPort: 4369

        readinessProbe:
          httpGet:
            path: /
            port: http
            httpHeaders:
            - name: Host
              value: www.affable.app

        resources:
          requests:
            cpu: 2m
            memory: 55Mi
          limits:
            cpu: 200m
            memory: 250Mi

      - name: cloudsql-proxy
        image: eu.gcr.io/cloudsql-docker/gce-proxy:1.22.0
        securityContext:
          allowPrivilegeEscalation: false

        command:
        - /cloud_sql_proxy

        resources:
          requests:
            cpu: 1m
            memory: 8Mi
          limits:
            cpu: 20m
            memory: 48Mi
