k8s/affable/stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: affable
spec:
  serviceName: affable
  template:
    metadata:
      annotations:
        traffic.sidecar.istio.io/excludeInboundPorts: 5555,4369
        sidecar.istio.io/proxyCPU: 50m
        sidecar.istio.io/proxyCPULimit: 1000m
    spec:
      volumes:
      - name: google-credentials
        secret:
          secretName: google-credentials

      containers:

      - name: affable
        image: affable:0
        ports:
        - name: http
          containerPort: 4000
        - name: tcp-erlang
          containerPort: 5555
        - name: tcp-epmd
          containerPort: 4369

        readinessProbe:
          initialDelaySeconds: 20
          httpGet:
            path: /
            port: http

        resources:
          requests:
            cpu: 2m
            memory: 55Mi
          limits:
            cpu: 200m
            memory: 250Mi

      - name: cloudsql-proxy
        image: eu.gcr.io/cloudsql-docker/gce-proxy:1.19.1
        securityContext:
          allowPrivilegeEscalation: false

        command:
        - /cloud_sql_proxy

        volumeMounts:
        - name: google-credentials
          mountPath: /secrets/cloudsql
          readOnly: true

        resources:
          requests:
            cpu: 1m
            memory: 8Mi
          limits:
            cpu: 20m
            memory: 48Mi
