k8s/affable/version.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: affable
spec:
  template:
    metadata:
      labels:
        version: "d536292"
