k8s/affable/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: affable
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: http
    targetPort: http
  ipFamilies:
  - IPv4
  - IPv6
  ipFamilyPolicy: PreferDualStack
