k8s/affable/google-sql-api-egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: google-sql-api
spec:
  exportTo:
  - .
  hosts:
  - sqladmin.googleapis.com
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
