k8s/affable/googleapis-egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: google-compute-api
spec:
  exportTo:
  - .
  hosts:
  - compute.googleapis.com
  - www.googleapis.com
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
