k8s/affable/sendgrid-api-egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: sendgrid-api
spec:
  exportTo:
  - .
  hosts:
  - api.sendgrid.com
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
