k8s/affable/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: affable
spec:
  hosts:
  - affable.app
  - www.affable.app
  - images.affable.app
  gateways:
  - affable
  http:
  - match:
    - authority:
        exact:
          affable.app
    redirect:
      authority:
        www.affable.app
  - match:
    - authority:
        exact:
          www.affable.app
      uri:
        prefix: /
    route:
    - destination:
        host: affable
  - match:
    - authority:
        exact:
          images.affable.app
      uri:
        prefix: /
    route:
    - destination:
        host: imgproxy
        port:
          number: 80
      headers:
        request:
          set:
            x-envoy-retriable-status-codes: "404"
    retries:
      attempts: 5
      retryOn: retriable-status-codes
